--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,6 +112,7 @@
     let personas = [];
     personas = JSON.parse(decodeURIComponent('<%- encodeURIComponent(JSON.stringify(personas)) %>'));
     console.log(personas);
+    console.log('test')
 
     function convertStarsToNumber(stars) {
         if (!stars) {
